Try to solve libtinfo problem
  - Current branch carries a Terminfo overhaul in tools/CMakeLists.txt:40-201 that adds GENTEST_USE_SYSTEM_TERMINFO, prefers a bundled gentest_tinfo_shim shared lib, wires in a version script, and keeps Terminfo::terminfo satisfied even when libtinfo5 is missing.
  - New export map tools/terminfo_shim.map:1 defines the NCURSES_TINFO_5.0.19991023 symbol set used by the shim.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -37,16 +37,12 @@ endif()
 # Some LLVM builds export a Terminfo::terminfo dependency even when the host
 # toolchain lacks a proper CMake package. Provide a best-effort target before
 # loading the LLVM exports to keep configuration working on minimalist runners.
+option(GENTEST_USE_SYSTEM_TERMINFO "Link against the host-provided Terminfo package instead of the bundled shim" OFF)
 if(NOT TARGET Terminfo::terminfo)
-    find_package(Terminfo QUIET)
     set(_gentest_terminfo_links "")
     set(_gentest_terminfo_includes "")
-    if(Terminfo_FOUND AND Terminfo_LIBRARIES)
-        list(APPEND _gentest_terminfo_links "${Terminfo_LIBRARIES}")
-        if(DEFINED Terminfo_INCLUDE_DIRS)
-            set(_gentest_terminfo_includes "${Terminfo_INCLUDE_DIRS}")
-        endif()
-    elseif(UNIX)
+    set(_gentest_use_local_tinfo_shim FALSE)
+    if(GENTEST_USE_SYSTEM_TERMINFO AND UNIX)
         set(_gentest_terminfo_candidates)
         # Prefer compatibility libraries that ship the legacy versioned symbols.
         set(_gentest_terminfo_search_dirs
@@ -73,28 +69,54 @@ if(NOT TARGET Terminfo::terminfo)
                 "${_gentest_dir}/libtinfo.so.5*" "${_gentest_dir}/libtinfo5.so*")
             list(APPEND _gentest_terminfo_candidates ${_gentest_found})
         endforeach()
-        if(NOT _gentest_terminfo_candidates)
-            # Fall back to generic libtinfo if the compat variant is not present.
-            find_library(_gentest_terminfo_lib
-                NAMES tinfo6 tinfo terminfo
-                PATHS ${_gentest_terminfo_search_dirs})
-            if(_gentest_terminfo_lib)
-                list(APPEND _gentest_terminfo_candidates "${_gentest_terminfo_lib}")
-            endif()
-            unset(_gentest_terminfo_lib CACHE)
-        endif()
         if(_gentest_terminfo_candidates)
             list(GET _gentest_terminfo_candidates 0 _gentest_best_terminfo)
             list(APPEND _gentest_terminfo_links "${_gentest_best_terminfo}")
             unset(_gentest_best_terminfo)
-        else()
-            # Final fallback: rely on the linker default.
-            list(APPEND _gentest_terminfo_links "tinfo")
         endif()
         unset(_gentest_terminfo_candidates)
         unset(_gentest_terminfo_search_dirs)
     endif()
+    if(GENTEST_USE_SYSTEM_TERMINFO AND _gentest_terminfo_links STREQUAL "")
+        find_package(Terminfo QUIET)
+        if(Terminfo_FOUND AND Terminfo_LIBRARIES)
+            foreach(_gentest_candidate IN LISTS Terminfo_LIBRARIES)
+                if(_gentest_candidate MATCHES "libtinfo\\.so\\.5(\\..*)?$")
+                    list(APPEND _gentest_terminfo_links "${_gentest_candidate}")
+                endif()
+            endforeach()
+            if(_gentest_terminfo_links STREQUAL "" AND Terminfo_LIBRARIES)
+                # Accept the library only when explicitly requested via cache, otherwise rely on shim.
+                if(GENTEST_USE_SYSTEM_TERMINFO)
+                    list(APPEND _gentest_terminfo_links "${Terminfo_LIBRARIES}")
+                endif()
+            endif()
+            if(_gentest_terminfo_includes STREQUAL "" AND DEFINED Terminfo_INCLUDE_DIRS)
+                set(_gentest_terminfo_includes "${Terminfo_INCLUDE_DIRS}")
+            endif()
+        endif()
+    endif()
+    if(NOT GENTEST_USE_SYSTEM_TERMINFO)
+        set(_gentest_use_local_tinfo_shim TRUE)
+    elseif(_gentest_terminfo_links STREQUAL "" AND UNIX)
+        set(_gentest_use_local_tinfo_shim TRUE)
+    endif()
     add_library(Terminfo::terminfo INTERFACE IMPORTED)
+    if(_gentest_use_local_tinfo_shim)
+        add_library(gentest_tinfo_shim SHARED src/terminfo_shim.cpp)
+        target_link_libraries(gentest_tinfo_shim PRIVATE dl)
+        set_target_properties(gentest_tinfo_shim PROPERTIES
+            OUTPUT_NAME tinfo
+            SOVERSION 5
+            VERSION 5
+            LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+        target_link_options(gentest_tinfo_shim PRIVATE
+            "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/terminfo_shim.map")
+        list(APPEND _gentest_terminfo_links gentest_tinfo_shim)
+        if(UNIX)
+            set_property(TARGET gentest_tinfo_shim PROPERTY BUILD_RPATH "${CMAKE_CURRENT_BINARY_DIR}")
+        endif()
+    endif()
     if(_gentest_terminfo_links)
         set_target_properties(Terminfo::terminfo PROPERTIES
             INTERFACE_LINK_LIBRARIES "${_gentest_terminfo_links}")
@@ -160,16 +182,22 @@ add_executable(gentest_codegen
 
 target_compile_features(gentest_codegen PRIVATE cxx_std_23)
 
+if(_gentest_use_local_tinfo_shim AND UNIX)
+    set_property(TARGET gentest_codegen APPEND PROPERTY BUILD_RPATH "${CMAKE_CURRENT_BINARY_DIR}")
+endif()
+
 if(UNIX AND NOT APPLE)
-    target_sources(gentest_codegen PRIVATE src/terminfo_shim.cpp)
-    find_library(_gentest_dl_lib dl)
-    if(_gentest_dl_lib)
-        target_link_libraries(gentest_codegen PRIVATE "${_gentest_dl_lib}")
-    else()
-        target_link_libraries(gentest_codegen PRIVATE dl)
+    if(NOT TARGET gentest_tinfo_shim)
+        target_sources(gentest_codegen PRIVATE src/terminfo_shim.cpp)
+        find_library(_gentest_dl_lib dl)
+        if(_gentest_dl_lib)
+            target_link_libraries(gentest_codegen PRIVATE "${_gentest_dl_lib}")
+        else()
+            target_link_libraries(gentest_codegen PRIVATE dl)
+        endif()
+        unset(_gentest_dl_lib CACHE)
+        unset(_gentest_dl_lib)
     endif()
-    unset(_gentest_dl_lib CACHE)
-    unset(_gentest_dl_lib)
 endif()
 
 ## Embedded templates are used by default; --template can point to an external file if desired
