win+macos - shimless?

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -102,6 +102,16 @@ if(NOT TARGET Terminfo::terminfo)
         set(_gentest_use_local_tinfo_shim TRUE)
     endif()
     add_library(Terminfo::terminfo INTERFACE IMPORTED)
+    if(APPLE AND _gentest_use_local_tinfo_shim)
+        find_library(_gentest_ncurses_lib NAMES ncursesw ncurses curses)
+        if(_gentest_ncurses_lib)
+            list(APPEND _gentest_terminfo_links "${_gentest_ncurses_lib}")
+        else()
+            list(APPEND _gentest_terminfo_links "-lncurses")
+        endif()
+        set(_gentest_use_local_tinfo_shim FALSE)
+    endif()
+
     if(_gentest_use_local_tinfo_shim)
         add_library(gentest_tinfo_shim SHARED src/terminfo_shim.cpp)
         target_link_libraries(gentest_tinfo_shim PRIVATE dl)
