--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -98,24 +98,31 @@ jobs:
       - name: Setup Ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
 
-      - name: Ensure LLVM is up to date
-        shell: pwsh
-        run: choco upgrade llvm -y --no-progress
-
-      - name: Add LLVM to PATH
-        run: echo "C:\Program Files\LLVM\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
-      - name: Set LLVM CMake path
+      - name: Download LLVM distribution (tarball)
         shell: pwsh
         run: |
-          $llvmPrefix = "${Env:ProgramFiles}\LLVM"
-          "LLVM_DIR=$llvmPrefix\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          $version = "21.1.3"
+          $archive = "clang+llvm-$version-x86_64-pc-windows-msvc.tar.xz"
+          $url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$version/$archive"
+          Invoke-WebRequest -Uri $url -OutFile $archive
+
+      - name: Extract LLVM toolchain
+        shell: pwsh
+        run: |
+          $archive = Get-Item clang+llvm-*-x86_64-pc-windows-msvc.tar.xz
+          tar -xf $archive.FullName
+          $extracted = Get-ChildItem -Directory | Where-Object { $_.Name -like "clang+llvm-*-x86_64-pc-windows-msvc" } | Select-Object -First 1
+          if (-not $extracted) { throw "Failed to locate extracted LLVM directory." }
+          "$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          "LLVM_BIN=$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "LLVM_DIR=$($extracted.FullName)\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Show tool versions
         shell: pwsh
         run: |
           cmake --version
           ninja --version
+          "$env:LLVM_BIN\clang-cl.exe" --version
           clang-cl --version
 
       - name: Setup vcpkg
