--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,27 @@ jobs:
 
       - name: Select bundled Xcode toolchain
         if: matrix.compiler == 'appleclang'
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+        run: |
+          set -euo pipefail
+          CANDIDATES=(
+            "/Applications/Xcode_16.2.app/Contents/Developer"
+            "/Applications/Xcode_16.1.app/Contents/Developer"
+            "/Applications/Xcode_16.0.app/Contents/Developer"
+            "/Applications/Xcode.app/Contents/Developer"
+          )
+          SELECTED=""
+          for candidate in "${CANDIDATES[@]}"; do
+            if [ -d "${candidate}" ]; then
+              SELECTED="${candidate}"
+              break
+            fi
+          done
+          if [ -z "${SELECTED}" ]; then
+            echo "No suitable Xcode installation found in: ${CANDIDATES[*]}" >&2
+            exit 1
+          fi
+          sudo xcode-select --switch "${SELECTED}"
+          echo "DEVELOPER_DIR=${SELECTED}" >> $GITHUB_ENV
 
       - name: Install dependencies (Homebrew)
         run: |
@@ -41,15 +61,24 @@ jobs:
           LLVM_PREFIX="$(brew --prefix llvm)"
           echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=${LLVM_PREFIX}/bin:$PATH" >> $GITHUB_ENV
+          echo "LDFLAGS=-L${LLVM_PREFIX}/lib" >> $GITHUB_ENV
+          echo "CPPFLAGS=-I${LLVM_PREFIX}/include" >> $GITHUB_ENV
+          if [ -n "${CMAKE_PREFIX_PATH:-}" ]; then
+            echo "CMAKE_PREFIX_PATH=${LLVM_PREFIX}:${CMAKE_PREFIX_PATH}" >> $GITHUB_ENV
+          else
+            echo "CMAKE_PREFIX_PATH=${LLVM_PREFIX}" >> $GITHUB_ENV
+          fi
           if [ "${{ matrix.compiler }}" = "llvm" ]; then
             echo "LLVM_BIN=${LLVM_PREFIX}/bin" >> $GITHUB_ENV
           fi
 
       - name: Configure environment
         run: |
-          echo "SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
           echo "CCACHE_DISABLE=1" >> $GITHUB_ENV
           echo "CMAKE_GENERATOR=Ninja" >> $GITHUB_ENV
+          if [ "${{ matrix.compiler }}" = "appleclang" ]; then
+            echo "SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
+          fi
 
       - name: Setup Ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
@@ -110,7 +139,13 @@ jobs:
         shell: pwsh
         run: |
           $archive = Get-Item clang+llvm-*-x86_64-pc-windows-msvc.tar.xz
-          tar -xf $archive.FullName
+          $sevenZip = Join-Path ${env:ProgramFiles} "7-Zip\7z.exe"
+          if (-not (Test-Path $sevenZip)) { $sevenZip = "7z" }
+          & $sevenZip x $archive.FullName -aoa | Out-Null
+          $tarPath = [System.IO.Path]::ChangeExtension($archive.FullName, ".tar")
+          $tar = Get-Item $tarPath
+          & $sevenZip x $tar.FullName -aoa | Out-Null
+          Remove-Item $tar.FullName
           $extracted = Get-ChildItem -Directory | Where-Object { $_.Name -like "clang+llvm-*-x86_64-pc-windows-msvc" } | Select-Object -First 1
           if (-not $extracted) { throw "Failed to locate extracted LLVM directory." }
           "$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
