--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   macos:
     name: macOS • ${matrix.compiler} • ${matrix.build-type}
-    runs-on: macos-14
+    runs-on: macos-15
     strategy:
         fail-fast: false
         matrix:
@@ -32,6 +32,13 @@ jobs:
         run: |
           set -euo pipefail
           CANDIDATES=(
+            "/Applications/Xcode_26.1_beta_2.app/Contents/Developer"
+            "/Applications/Xcode_26.1_beta.app/Contents/Developer"
+            "/Applications/Xcode_26.1.app/Contents/Developer"
+            "/Applications/Xcode_26.0.1.app/Contents/Developer"
+            "/Applications/Xcode_26.0.app/Contents/Developer"
+            "/Applications/Xcode_16.4.app/Contents/Developer"
+            "/Applications/Xcode_16.3.app/Contents/Developer"
             "/Applications/Xcode_16.2.app/Contents/Developer"
             "/Applications/Xcode_16.1.app/Contents/Developer"
             "/Applications/Xcode_16.0.app/Contents/Developer"
@@ -127,30 +134,19 @@ jobs:
       - name: Setup Ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
 
-      - name: Download LLVM distribution (tarball)
-        shell: pwsh
-        run: |
-          $version = "21.1.3"
-          $archive = "clang+llvm-$version-x86_64-pc-windows-msvc.tar.xz"
-          $url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$version/$archive"
-          Invoke-WebRequest -Uri $url -OutFile $archive
+      - name: Install LLVM/Clang
+        uses: KyleMayes/install-llvm-action@v2
+        with:
+          version: "21.1.3"
+          arch: "x64"
 
-      - name: Extract LLVM toolchain
+      - name: Configure LLVM environment variables
         shell: pwsh
         run: |
-          $archive = Get-Item clang+llvm-*-x86_64-pc-windows-msvc.tar.xz
-          $sevenZip = Join-Path ${env:ProgramFiles} "7-Zip\7z.exe"
-          if (-not (Test-Path $sevenZip)) { $sevenZip = "7z" }
-          & $sevenZip x $archive.FullName -aoa | Out-Null
-          $tarPath = [System.IO.Path]::ChangeExtension($archive.FullName, ".tar")
-          $tar = Get-Item $tarPath
-          & $sevenZip x $tar.FullName -aoa | Out-Null
-          Remove-Item $tar.FullName
-          $extracted = Get-ChildItem -Directory | Where-Object { $_.Name -like "clang+llvm-*-x86_64-pc-windows-msvc" } | Select-Object -First 1
-          if (-not $extracted) { throw "Failed to locate extracted LLVM directory." }
-          "$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          "LLVM_BIN=$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          "LLVM_DIR=$($extracted.FullName)\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          if (-not $env:LLVM_PATH) { throw "LLVM_PATH was not set by install-llvm-action." }
+          "$env:LLVM_PATH\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          "LLVM_BIN=$($env:LLVM_PATH)\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "LLVM_DIR=$($env:LLVM_PATH)\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Show tool versions
         shell: pwsh
