--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   macos:
-    name: macOS • ${matrix.compiler} • ${matrix.build-type}
+    name: macOS • ${{ matrix.compiler }} • ${{ matrix.build-type }}
     runs-on: macos-15
     strategy:
         fail-fast: false
@@ -61,11 +61,17 @@ jobs:
       - name: Install dependencies (Homebrew)
         run: |
           brew update
-          brew install llvm ninja ccache
+          brew install ninja ccache
+
+      - name: Install LLVM toolchain
+        uses: KyleMayes/install-llvm-action@v2.0.8
+        with:
+          version: "20.1.8"
+          arch: "arm64"
 
       - name: Configure LLVM environment
         run: |
-          LLVM_PREFIX="$(brew --prefix llvm)"
+          LLVM_PREFIX="${LLVM_PATH:-$(brew --prefix llvm)}"
           echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=${LLVM_PREFIX}/bin:$PATH" >> $GITHUB_ENV
           echo "LDFLAGS=-L${LLVM_PREFIX}/lib" >> $GITHUB_ENV
@@ -135,9 +141,9 @@ jobs:
         uses: seanmiddleditch/gha-setup-ninja@v3
 
       - name: Install LLVM/Clang
-        uses: KyleMayes/install-llvm-action@v2
+        uses: KyleMayes/install-llvm-action@v2.0.8
         with:
-          version: "21.1.3"
+          version: "20.1.8"
           arch: "x64"
 
       - name: Configure LLVM environment variables
